--- a/graph.html
+++ b/graph.html
@@ -14,17 +14,36 @@
 <body>
     <canvas id="canvas" width="600" height="600"></canvas>
     <script>
+        function point(x, y) {
+            ctx.beginPath();
+            ctx.arc(x, y, 3, 0, 2 * Math.PI);
+            ctx.stroke();
+        }
+
         let c = document.getElementById("canvas");
         let ctx = c.getContext("2d");
-        ctx.moveTo(0, 0);
-        ctx.lineTo(200, 100);
-        ctx.stroke();
 
         let x = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99]
-        let y = [73,52,34,28,28,50,34,34,64,37,30,43,48,10,59,48,60,49,17,38,20,13,72,17,16,55,52,4,21,32,19,34,24,52,65,49,26,61,5,18,62,12,49,72,24,40,11,8,74,60,28,74,21,1,60,55,63,64,70,52,62,5,18,69,37,40,53,64,59,13,1,60,36,52,48,43,59,66,8,55,12,46,72,15,58,37,17,35,33,70,39,1,52,51,61,23,57,32,42,1]
+        let y = [43,49,49,27,1,40,58,45,14,8,35,12,36,14,31,16,42,9,26,3,61,69,42,42,30,30,30,12,30,5,71,62,30,52,72,52,12,42,18,60,62,28,9,47,21,45,22,66,14,35,74,39,71,36,75,34,13,74,73,74,18,57,73,20,3,70,13,4,24,31,72,20,53,20,31,28,59,31,49,52,23,34,66,66,18,55,65,31,61,55,73,58,54,20,12,9,45,28,2,75]
 
-        console.log(x);
-        console.log(y);
+        let min_x = Math.min(...x)
+        let max_x = Math.max(...x)
+        let min_y = Math.min(...y)
+        let max_y = Math.max(...y)
+
+        // scale canvas to fit data
+        let x_scale = max_x - min_x
+        let y_scale = max_y - min_y
+
+        let x_shift = min_x * x_scale
+        let y_shift = min_y * y_scale
+
+        //x = x.map(p => p * x_scale - x_shift)
+        //y = y.map(p => p * y_scale - y_shift)
+
+        // draw points
+        for (let i=0; i<x.length; i++) point(x[i], y[i])
+
     </script>
 </body>
 </html>
